--- a/Servicios/Maquina-Para-Destapar-Cantilde;erias-Precios.html
+++ b/Servicios/Maquina-Para-Destapar-Cantilde;erias-Precios.html
@@ -144,27 +144,27 @@ Maquina Para Destapar Ca&ntilde;erias Precios
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Renta-de-destapacaños-home-depot.html">Renta de destapacaños home depot </a> 
+       <a href="../Servicios/Con-Que-Se-Destapa-El-Cantilde;o.html">Con Que Se Destapa El Caño </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Productos-caseros-para-destapar-cañerias.html">Productos caseros para destapar cañerias </a> 
+       <a href="../Destapa-Cañerias/Bomba-destapacaños-home-depot.html">Bomba destapacaños home depot </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapar-Cañeria-De-La-Cocina.html">Destapar Cañeria De La Cocina </a> 
+       <a href="../Servicios/Empresa-Destapa-Cañerias-en-Palermo.html">Empresa Destapa Cañerias en Palermo </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Cable-destapa-cañerias-precio.html">Cable destapa cañerias precio </a> 
+       <a href="../Destapa-Cañerias/Destapacaños-manual-walmart.html">Destapacaños manual walmart </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Como-destapar-un-bantilde;o-dificil.html">Como destapar un baño dificil </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-Precios.html">Destapaciones Precios </a> 
          </li>
 <!--EndPostsList-->
 
@@ -227,57 +227,57 @@ Maquina Para Destapar Ca&ntilde;erias Precios
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-Precios.html">Destapaciones Precios </a> 
+       <a href="../Destapa-Cañerias/Bomba-destapacaños-home-depot.html">Bomba destapacaños home depot </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-de-cloacas-junin.html">Destapaciones de cloacas junin </a> 
+       <a href="../Servicios/Como-destapar-el-baño-con-bicarbonato-y-vinagre.html">Como destapar el baño con bicarbonato y vinagre </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapar-Cantilde;eria-De-Inodoro.html">Destapar Cañeria De Inodoro </a> 
+       <a href="../Servicios/Como-destapar-un-inodoro-sin-ventosa.html">Como destapar un inodoro sin ventosa </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-destapar-un-baño-sin-bicarbonato.html">Como destapar un baño sin bicarbonato </a> 
+       <a href="../Servicios/Destapa-cañerias-liquido-precio.html">Destapa cañerias liquido precio </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-destapar-un-wc-con-soda-caustica.html">Como destapar un wc con soda caustica </a> 
+       <a href="../Servicios/El-Mejor-Destapa-Cañerias-en-Palermo.html">El Mejor Destapa Cañerias en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Cocina-mabe-4-quemadores.html">Cocina mabe 4 quemadores </a> 
+       <a href="../Destapa-Cañerias/Destapa-cañerias-zona-sur-berazategui.html">Destapa cañerias zona sur berazategui </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapaciones-De-Cañerias-en-Palermo.html">Destapaciones De Cañerias en Palermo </a> 
+       <a href="../Servicios/Empresa-De-Destape-De-Cañerias-en-Palermo.html">Empresa De Destape De Cañerias en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/El-Plomero-Destapa-Cañerias-en-Palermo.html">El Plomero Destapa Cañerias en Palermo </a> 
+       <a href="../Servicios/Destapaciones-Cantilde;erias.html">Destapaciones Cañerias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-Con-Maquina.html">Destapaciones Con Maquina </a> 
+       <a href="../Servicios/Plomeria-Destapar-Cañerias-en-Palermo.html">Plomeria Destapar Cañerias en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-A-Domicilio.html">Destapaciones A Domicilio </a> 
+       <a href="../Servicios/Bloque-de-plata-en-la-tabla-periodica.html">Bloque de plata en la tabla periodica </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Federal-Destapaciones.html">Federal Destapaciones </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-un-inodoro-con-acido-muriatico.html">Como destapar un inodoro con acido muriatico </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
