--- a/Servicios/Mejor-Destapa-Cañerias-en-Palermo.html
+++ b/Servicios/Mejor-Destapa-Cañerias-en-Palermo.html
@@ -137,27 +137,27 @@ Mejor Destapa Cañerias
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapa-cañerias-zona-sur-berazategui.html">Destapa cañerias zona sur berazategui </a> 
+       <a href="../Destapa-Cañerias/Me-preguntaba-si-podrias-aconsejarme-sobre-Limpiar-tuberia-con-bicarbonato-y-vinagre.html">Me preguntaba si podrias aconsejarme sobre Limpiar tuberia con bicarbonato y vinagre </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Desagues-Pluviales-En-Viviendas.html">Desagues Pluviales En Viviendas </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-Emergencias-24hs.html">Destapaciones Emergencias 24hs </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Para-que-sirve-el-alcohol-boricado.html">Para que sirve el alcohol boricado </a> 
+       <a href="../Destapa-Cañerias/Alcohol-boricado-como-se-usa.html">Alcohol boricado como se usa </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Harpic-destapacaños-como-se-usa.html">Harpic destapacaños como se usa </a> 
+       <a href="../Servicios/Destapar-tuberias-de-aguas-servidas.html">Destapar tuberias de aguas servidas </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Maquina-Destapa-Cantilde;erias-Electrica.html">Maquina Destapa Cañerias Electrica </a> 
+       <a href="../Destapa-Cañerias/Destapación-De-Cañerías.html">Destapación De Cañerías </a> 
          </li>
 <!--EndPostsList-->
 
@@ -220,57 +220,57 @@ Mejor Destapa Cañerias
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Pendiente-Cantilde;eria-Cloacal.html">Pendiente Cañeria Cloacal </a> 
+       <a href="../Destapa-Cañerias/Destapa-Cañerias-Inodoro.html">Destapa Cañerias Inodoro </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapacaños-truper-home-depot.html">Destapacaños truper home depot </a> 
+       <a href="../Destapa-Cañerias/Liquido-para-destapar-tuberias-de-agua-potable.html">Liquido para destapar tuberias de agua potable </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapacaños-liquido-para-inodoro.html">Destapacaños liquido para inodoro </a> 
+       <a href="../Destapa-Cañerias/Destapar-cañerias-casero-vinagre.html">Destapar cañerias casero vinagre </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Aparato-Destapa-Cañerias-en-Palermo.html">Aparato Destapa Cañerias en Palermo </a> 
+       <a href="../Destapa-Cañerias/Hay-algun-consejo-para-Cantilde;erias-de-agua-tapadas.html">Hay algun consejo para Cañerias de agua tapadas </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Guia-destapacaños-pretul.html">Guia destapacaños pretul </a> 
+       <a href="../Destapa-Cañerias/Destapa-cloacas-caballito.html">Destapa cloacas caballito </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-destapar-un-baño-sin-bicarbonato.html">Como destapar un baño sin bicarbonato </a> 
+       <a href="../Servicios/Plomero-Destapa-Cañerias-en-Palermo.html">Plomero Destapa Cañerias en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destape-De-Desagues.html">Destape De Desagues </a> 
+       <a href="../Servicios/Camara-De-Inspeccion-Cloacal.html">Camara De Inspeccion Cloacal </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapar-Cañerias-Con-Grasa-en-Palermo.html">Destapar Cañerias Con Grasa en Palermo </a> 
+       <a href="../Destapa-Cañerias/Maquina-Para-Destapar-Caños.html">Maquina Para Destapar Caños </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapar-Cañeria-Del-Baño.html">Destapar Cañeria Del Baño </a> 
+       <a href="../Destapa-Cañerias/Servicio-Destapa-Cañerias.html">Servicio Destapa Cañerias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-De-Cloacas-Precios.html">Destapaciones De Cloacas Precios </a> 
+       <a href="../Destapa-Cañerias/Estoy-buscando-consejos-sobre-Destapar-cantilde;erias-con-bicarbonato.html">Estoy buscando consejos sobre Destapar cañerias con bicarbonato </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Bomba-destapacaños-home-depot.html">Bomba destapacaños home depot </a> 
+       <a href="../Servicios/Lo-Mejor-Para-Destapar-Bantilde;os.html">Lo Mejor Para Destapar Baños </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
